@@ -17,8 +17,6 @@
 package org.apache.solr.schema;
 
 import static java.util.Arrays.asList;
-import static java.util.Collections.singletonList;
-import static java.util.Collections.singletonMap;
 
 import java.io.IOException;
 import java.io.Writer;
@@ -1801,7 +1799,7 @@ public class IndexSchema {
    * @see #newField(String, String, Map)
    */
   public IndexSchema addField(SchemaField newField, boolean persist) {
-    return addFields(Collections.singletonList(newField), Map.of(), persist);
+    return addFields(List.of(newField), Map.of(), persist);
   }
 
   public IndexSchema addField(SchemaField newField) {
@@ -1819,8 +1817,7 @@ public class IndexSchema {
    * @see #newField(String, String, Map)
    */
   public IndexSchema addField(SchemaField newField, Collection<String> copyFieldNames) {
-    return addFields(
-        singletonList(newField), singletonMap(newField.getName(), copyFieldNames), true);
+    return addFields(List.of(newField), Map.of(newField.getName(), copyFieldNames), true);
   }
 
   /**
