@@ -22,7 +22,6 @@ import static org.hamcrest.core.StringContains.containsString;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.LinkedList;
 import java.util.List;
@@ -457,7 +456,7 @@ public class PeerSyncTest extends BaseDistributedSearchTestCase {
     // no other, solitary us
     for (boolean completeList : new boolean[] {false, true}) {
       List<Long> otherVersions = List.of();
-      List<Long> ourUpdates = Collections.singletonList(42L);
+      List<Long> ourUpdates = List.of(42L);
       assertEquals(1, ourUpdates.size());
       long ourLowThreshold = ourUpdates.get(0);
       MissedUpdatesRequest mur =
@@ -471,8 +470,8 @@ public class PeerSyncTest extends BaseDistributedSearchTestCase {
 
   private static void testHandleVersionsWithRangesSameOne() {
     for (boolean completeList : new boolean[] {false, true}) {
-      List<Long> otherVersions = Collections.singletonList(42L);
-      List<Long> ourUpdates = Collections.singletonList(42L);
+      List<Long> otherVersions = List.of(42L);
+      List<Long> ourUpdates = List.of(42L);
       assertEquals(1, ourUpdates.size());
       long ourLowThreshold = ourUpdates.get(0);
       MissedUpdatesRequest mur =
